[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bw-backup"
version = "0.1.0"
description = "Bitwarden backup with GPG encryption"
requires-python = ">=3.13"
dependencies = [
    "python-gnupg",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-cov>=4.0"]

[project.scripts]
bw-backup = "bw_backup:main"
